src/test/test-models/bad/reserved/xor_eq.stan
data {
  real xor_eq;
}
model {
}
